--- a/app/views/youtube_videos/show.html.erb
+++ b/app/views/youtube_videos/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1><%= @youtube_video.title %></h1>
+  <h1 class="video-title"><%= @youtube_video.title %></h1>
   <!-- 動画の埋め込み表示 -->
   <div class="video-wrapper">
     <iframe class="w-full aspect-video" id="youtube-video"
@@ -7,7 +7,7 @@
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
   </div>
-  <p>公開日: <%= @youtube_video.published_at %></p>
+  <p>公開日: <%= l(@youtube_video.published_at, format: :long) %></p>
   <p>動画時間: <%= format_duration(@youtube_video.duration) %></p>
   <!-- いいねボタンとその他のコンポーネント -->
   <div id="like_button">
@@ -72,19 +72,26 @@
 </script>
 
 <style>
-.video-wrapper {
-  position: relative;
-  padding-top: 56.25%;
-  height: 0;
-  overflow: hidden;
-  z-index: 10;
-}
+  .video-wrapper {
+    position: relative;
+    padding-top: 56.25%;
+    height: 0;
+    overflow: hidden;
+    z-index: 10;
+  }
 
-.video-wrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+  .video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .video-title {
+      font-size: 2.5rem; /* 40pxに相当 */
+      font-weight: bold; /* 太字にする */
+      color: #333; /* 色を暗めのグレーに設定 */
+      margin-bottom: 20px; /* 下の要素との間隔 */
+  }
 </style>
