フッター項目を実装

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,11 @@
-<footer class="footer footer-center p-4 bg-base-300 text-base-content  w-full">
-  <aside>
+<footer class="footer footer-center p-4 bg-base-300 text-base-content w-full">
+  <div>
+    <p>
+      <%= link_to '利用規約', agreement_path, class: "link link-hover" %>
+    </p>
+    <p>
+      <%= link_to 'プライバシーポリシー', privacy_path, class: "link link-hover" %>
+    </p>
     <p>Copyright © 2024. ViMemo</p>
-  </aside>
+  </div>
 </footer>
