--- a/app/views/likes/_like_button.html.erb
+++ b/app/views/likes/_like_button.html.erb
@@ -1,4 +1,4 @@
-<div id="like_button">
+<div id="like_button_<%= youtube_video.id %>">
   <% user_like = youtube_video.likes.find_by(user: current_user) %>
   <% if user_like %>
     <%= link_to t('likes.unliked'), youtube_video_like_path(youtube_video, user_like, likeable_type: youtube_video.class.name, likeable_id: youtube_video.id), method: :delete, data: { turbo_method: :delete, turbo_frame: "like_button" }, remote: true, class: 'btn btn-outline btn-warning' %>
