--- a/app/views/likes/create.turbo_stream.erb
+++ b/app/views/likes/create.turbo_stream.erb
@@ -1,3 +1,3 @@
-<%= turbo_stream.replace "like_button" do %>
+<%= turbo_stream.replace "like_button_#{params[:likeable_id]}" do %>
   <%= render partial: "like_button", locals: { youtube_video: @likeable } %>
 <% end %>
