--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,20 +1,28 @@
-<h2>メモの編集</h2>
+<h2 class="text-2xl font-bold mb-6">メモの編集</h2>
 <% video = @youtube_video || @video %>
 
-<%= form_with model: [video, @note], id: "edit_note-#{@note.id}", class: 'edit_note', local: true do |f| %>
-  <div class="form-group">
-    <%= f.label :video_timestamp, "タイムスタンプ" %>
-    <%= f.text_field :video_timestamp, class: 'form-control' %>
+<%= form_with model: [video, @note], id: "edit_note-#{@note.id}", class: 'form p-4 shadow-lg rounded-lg', local: true do |f| %>
+  <div id="errors">
+    <%= render 'shared/error_messages', object: @note %>
   </div>
-  <div class="form-group">
-    <%= f.label :content, "メモの内容" %>
-    <%= f.text_area :content, class: 'form-control' %>
+  <div class="form-control">
+    <%= f.label :video_timestamp, "タイムスタンプ", class: 'label' %>
+    <%= f.text_field :video_timestamp, class: 'input input-bordered' %>
   </div>
-  <div class="form-group">
-    <%= f.label :is_visible, "表示" %>
-    <%= f.select :is_visible, [[ '表示する', true ], [ '表示しない', false ]], {}, { class: "form-select" } %>
+
+  <div class="form-control mt-4">
+    <%= f.label :content, "メモの内容", class: 'label' %>
+    <%= f.text_area :content, class: 'textarea textarea-bordered', rows: 3 %>
   </div>
-  <%= f.submit "更新する", class: 'btn btn-primary' %>
+
+  <div class="form-control mt-4">
+    <%= f.label :is_visible, "表示", class: 'label' %>
+    <%= f.select :is_visible, [['表示する', true], ['表示しない', false]], {}, { class: "select select-bordered" } %>
+  </div>
+
+  <div class="mt-6">
+    <%= f.submit "更新する", class: 'btn btn-primary' %>
+  </div>
 <% end %>
 
-<%= link_to '戻る', back_path, class: 'btn btn-secondary' %>
+<%= link_to '戻る', back_path, class: 'btn btn-secondary mt-2' %>
