--- a/app/views/youtube_videos/_youtube_video.html.erb
+++ b/app/views/youtube_videos/_youtube_video.html.erb
@@ -1,4 +1,4 @@
-<div class="mb-4 btn">
+<div class="mb-4 btn btn-outline btn-info">
   <h1>
     <%= link_to youtube_video.title, youtube_video_path(youtube_video) %>
   </h1>
