--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,6 +12,7 @@
     </div>
     <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52" style="z-index: 1001;">
       <li><%= link_to 'マイページ', users_mypage_path %></li>
+      <li><%= link_to 'Youtube一覧', youtube_videos_path %></li>
       <li><%= link_to '投稿ビデオ一覧', videos_path %></li>
       <li><%= link_to t('header.logout'), logout_path, data: { turbo_method: :delete } %></li>
     </ul>
