--- a/app/views/youtube_videos/index.html.erb
+++ b/app/views/youtube_videos/index.html.erb
@@ -3,11 +3,11 @@
   <div class="flex justify-left mb-6">
     <%= render 'youtube_videos/search_form', q: @q %>
   </div>
-  <div tabindex="0" class="collapse collapse-arrow border border-base-300 bg-base-100 rounded-box mb-5">
+  <div tabindex="0" class="collapse collapse-arrow border border-base-300 bg-base-100 rounded-box mb-5" style="border-color: #004080; border-width: 2px; border-style: solid; border-radius: 8px;">
     <div class="collapse-title text-xl font-medium" id="accordion-toggle">
       ソートオプション
     </div>
-    <div class="mb-4" style="display: none; flex-direction: column;">
+    <div class="mb-4" style="display: none; flex-direction: column; padding: 10px;">
       <%= link_to t('defaults.sort.likes_desc'), youtube_videos_path(sort: 'likes_desc', q: @filtered_q_params), class: "btn btn-accent mb-2" %>
       <%= link_to t('defaults.sort.notes_desc'), youtube_videos_path(sort: 'notes_desc', q: @filtered_q_params), class: "btn btn-accent mb-2" %>
       <%= link_to t('defaults.sort.created_at_desc'), youtube_videos_path(sort: 'created_at_desc', q: @filtered_q_params), class: "btn btn-accent mb-2" %>
