お気に入り画面一覧にソート機能を実装

--- a/app/views/combined_videos/favorites.html.erb
+++ b/app/views/combined_videos/favorites.html.erb
@@ -1,19 +1,39 @@
 <div class="container mb-5 pt-2 px-4 sm:px-6 lg:px-8 max-w-full sm:max-w-xl md:max-w-2xl lg:max-w-4xl">
   <h1 class="text-3xl font-bold mb-4 text-left">お気に入り一覧</h1>
+  <div tabindex="0" class="collapse collapse-arrow border border-base-300 bg-base-100 rounded-box mb-5" style="border-color: #004080; border-width: 2px; border-style: solid; border-radius: 8px;">
+    <div class="collapse-title text-xl font-medium" id="accordion-toggle">
+      ソートオプション
+    </div>
+    <div class="mb-4" style="display: none; flex-direction: column; padding: 10px;">
+      <%= link_to t('defaults.sort.likes_desc'), favorites_videos_path(sort_key: 'likes_count', sort_order: 'desc'), class: "btn btn-accent mb-2" %>
+      <%= link_to t('defaults.sort.notes_desc'), favorites_videos_path(sort_key: 'notes_count', sort_order: 'desc'), class: "btn btn-accent mb-2" %>
+      <%= link_to t('defaults.sort.created_at_desc'), favorites_videos_path(sort_key: 'created_at', sort_order: 'desc'), class: "btn btn-accent mb-2" %>
+    </div>
+  </div>
   <div class="flex">
     <div class="w-full">
-      <% if @likes.any? %>
+      <% if @paginated_videos.any? %>
         <div class="mb-4">
-          <% @likes.each do |like| %>
-            <%= render like.likeable %>
+          <% @paginated_videos.each do |video| %>
+            <%= render video %>
           <% end %>
         </div>
         <div class="mt-4">
-          <%= paginate @likes %>
+          <%= paginate @paginated_videos %>
         </div>
       <% else %>
         <p>いいねした動画がありません。</p>
       <% end %>
     </div>
   </div>
-</div>
+
+<script>
+  document.getElementById('accordion-toggle').addEventListener('click', function(event) {
+    var content = this.nextElementSibling;
+    if (content.style.display === 'none') {
+      content.style.display = 'block';
+    } else {
+      content.style.display = 'none';
+    }
+  });
+</script>
