--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,6 +14,7 @@
       <li><%= link_to 'マイページ', users_mypage_path %></li>
       <li><%= link_to 'Youtube一覧', youtube_videos_path %></li>
       <li><%= link_to '投稿ビデオ一覧', videos_path %></li>
+      <li><%= link_to 'お気に入り一覧', favorites_videos_path %></li>
       <li><%= link_to t('header.logout'), logout_path, data: { turbo_method: :delete } %></li>
     </ul>
   </div>
