--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,16 @@
 <footer class="footer footer-center p-4 bg-base-300 text-base-content w-full">
-  <div>
+  <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
     <p>
       <%= link_to '利用規約', agreement_path, class: "link link-hover" %>
     </p>
     <p>
       <%= link_to 'プライバシーポリシー', privacy_path, class: "link link-hover" %>
     </p>
-    <p>Copyright © 2024. ViMemo</p>
+    <p>
+      <%= link_to 'お問い合わせ', 'https://docs.google.com/forms/d/e/1FAIpQLSeQeuzGKun6xQNU5EcZqSS2c8ju1uMWp2dM-AYGqNGY_QBscA/viewform', class: "link link-hover", target: "_blank" %>
+    </p>
   </div>
+  <p>
+    Copyright © 2024. ViMemo
+  </p>
 </footer>
