--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -39,5 +39,23 @@
                 お使いのブラウザはビデオタグをサポートしていません。
             </video>
         </div>
+
+        <div class="card bg-base-100 shadow-xl p-6 mb-6">
+            <h3 class="font-semibold">ソート機能</h3>
+            3つのパターンでソートが可能です。
+            <video controls width="100%">
+                <source src="/videos/search.mp4" type="video/mp4">
+                お使いのブラウザはビデオタグをサポートしていません。
+            </video>
+        </div>
+
+        <div class="card bg-base-100 shadow-xl p-6 mb-6">
+            <h3 class="font-semibold">動画取得</h3>
+            マイページから動画取得可能です。取得したい方はお問い合わせから権限リクエストお願いいたします。
+            <video controls width="100%">
+                <source src="/videos/get.mp4" type="video/mp4">
+                お使いのブラウザはビデオタグをサポートしていません。
+            </video>
+        </div>
     </div>
 </div>
