admin管理画面　Youtube削除機能を実装

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -25,4 +25,5 @@
       <%= paginate @users %>
     </div>
   </div>
+  <%= link_to 'ビデオ一覧', admin_videos_path(@video), class: 'btn btn-success' %>
 </div>
