--- a/app/views/admin/videos/_video.html.erb
+++ b/app/views/admin/videos/_video.html.erb
@@ -11,6 +11,7 @@
     <p>公開日: <%= l(youtube_video.published_at, format: :long) %></p>
     <p>動画時間: <%= format_duration(youtube_video.duration) %></p>
     <p>メモ数: <%= youtube_video.notes.count %></p>
+    <p>いいね数: <%= youtube_video.likes.count %></p>
     <%= link_to '削除', youtube_video_path(youtube_video), 
             data: { turbo_method: :delete, 
                     turbo_confirm: 'この動画を削除してよろしいですか？'}, 
