--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -16,6 +16,10 @@
         <span class="font-bold">メモ:</span>
         <%= note.content %>
       </p>
+      <p>
+        <span class="font-bold">いいね:</span>
+        <%= render 'likes/like_count', likeable: note %>
+      </p>
       <% unless note.is_visible %>
         <p><span class="badge badge-error">非表示中</span></p>
       <% end %>
@@ -26,6 +30,9 @@
           <% end %>
           <%= link_to '編集', edit_path_for(note), data: { turbo_frame: dom_id(note) }, class: 'btn btn-outline btn-info' %>
           <%= link_to '削除', delete_path_for(note), data: { turbo_method: :delete, turbo_confirm: t('defaults.delete_confirm')}, class: 'btn btn-outline btn-error' %>
+          <% if current_user %>
+            <%= render 'likes/like_button', likeable: note %>
+          <% end %>
         </div>
       <% end %>
     </div>
