--- a/app/views/likes/_like_count.html.erb
+++ b/app/views/likes/_like_count.html.erb
@@ -1,1 +1,1 @@
-<p id="like_count_<%= likeable.id %>">いいね数: <%= likeable.likes.count %></p>
+<p class="font-bold" id="like_count_<%= likeable.id %>">いいね数: <%= likeable.likes.count %></p>
