--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,8 +1,8 @@
-<div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-full sm:max-w-xl md:max-w-2xl lg:max-w-4xl">
+<div class="container px-4 sm:px-6 lg:px-8 w-full">
     <h1 class="text-3xl font-bold mb-4 text-left">サービス概要</h1>
     <p class="mb-4">動画視聴中に時間軸上で直感的にメモを追加し、共有できるサービスになります。</p>
     
-    <h2 class="text-2xl font-bold mb-4 text-left">主な機能</h2>
+    <h2 class="text-2xl font-bold mb-1 text-left">主な機能</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
         <div class="card bg-base-100 shadow-xl p-6 mb-6">
             <h3 class="font-semibold">アカウント管理</h3>
@@ -33,7 +33,7 @@
 
         <div class="card bg-base-100 shadow-xl p-6 mb-6">
             <h3 class="font-semibold">メモの共有と管理</h3>
-            作成したメモは編集・削除・Xで共有ができます。
+            作成したメモは、いいね・編集・削除・Xで共有ができます。
             <video controls width="100%">
                 <source src="/videos/X.mp4" type="video/mp4">
                 お使いのブラウザはビデオタグをサポートしていません。
@@ -51,7 +51,7 @@
 
         <div class="card bg-base-100 shadow-xl p-6 mb-6">
             <h3 class="font-semibold">動画取得</h3>
-            マイページから動画取得可能です。取得したい方はお問い合わせから権限リクエストお願いいたします。
+            マイページから動画取得可能です。取得したい方はお問い合わせから権限リクエストをお願いいたします。
             <video controls width="100%">
                 <source src="/videos/get.mp4" type="video/mp4">
                 お使いのブラウザはビデオタグをサポートしていません。
