--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container px-4 sm:px-6 lg:px-8 w-full">
+<div class="container mx-auto px-4 sm:px-6 lg:px-8 w-full">
     <h1 class="text-3xl font-bold mb-4 text-left">サービス概要</h1>
     <p class="mb-4">動画視聴中に時間軸上で直感的にメモを追加し、共有できるサービスになります。</p>
     
