--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,5 +1,5 @@
 <div class="p-2 flex-1 lg:max-w-1/3">
-  <div id="<%= dom_id(note) %>" class="card max-w-full bg-base-100 shadow-xl hover:shadow-2xl transition-shadow duration-300 mb-3">
+  <div id="<%= dom_id(note) %>" class="card mx-auto w-full bg-base-100 shadow-xl hover:shadow-2xl transition-shadow duration-300 mb-3">
     <div class="card-body">
       <%= image_tag(note.user.avatar.url, width: '100', height: '100') %>
       <p>
@@ -23,7 +23,7 @@
         <p><span class="badge badge-error">非表示中</span></p>
       <% end %>
       <% if note.persisted? %>
-        <div class="card-actions justify-between">
+        <div class="card-actions">
           <% if note.youtube_video.present? %>
             <%= render 'likes/like_button', likeable: note %>
           <% end %>
