tailwindの設定変更

--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -31,7 +31,7 @@
           <%= link_to t('videos.create'), new_video_path, class: 'btn btn-outline btn-primary' %>
         </li>
         <li>
-          <%= link_to '会員一覧', admin_users_path(@user), class: 'btn btn-success' %>
+          <%= link_to '会員一覧', admin_users_path(@user), class: 'btn btn-outline' %>
         </li>
       </ul>
     </div>
